[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cascade-memory-mcp"
version = "0.1.0"
description = "Thin MCP wrapper package for CASCADE memory_server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mem0ai[graph]==0.1.118",
    "mcp==1.13.0",
    "supabase==2.18.1",
    "openai==1.102.0",
    "python-dotenv==1.1.1",
    "neo4j==5.28.2",
    "vecs==0.4.5",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
